Alterando parte do design e inicio da adição de filtro, por nome da aparição

--- a/main_style.css
+++ b/main_style.css
@@ -56,6 +56,10 @@ figcaption
     cursor: pointer;
     margin-bottom: 20px;
     border: 0px!important;
+    --bs-card-bg: #ffffff00!important;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .card:hover {
@@ -63,7 +67,22 @@ figcaption
 }
 
 .card-body {
-    padding: 20px;    
+    padding: 20px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    width: 50%;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 3rem;
+    border: 3px solid #571111;
+    border-radius: 12px;
+    gap: 7.5px;
+}
+
+.nomeAparicao{
+    font-size: 22px!important;
+    text-decoration: none!important;
+    font-weight: 700;
 }
 
 .paiTitle{
@@ -84,25 +103,6 @@ figcaption
 .card-text {
     font-size: 1rem;
 }
-
-@media (max-width: 991px) {
-    .navBarItens {
-        margin-top: 1.5vh;
-        flex-direction: column;
-        align-items: flex-start;
-    }
-
-    .navBarItens a {
-        font-size: 22px;
-        font-weight: 600;
-    }
-}
-@Media(max-width: 368px){
-    .listAparicoes{
-        font-size: 42px!important;
-    }
-}
-
 .country-section {
     margin-bottom: 1.5vh;
     font-size: 120px;
@@ -112,6 +112,7 @@ figcaption
     font-size: 35px; 
     color: black;
     font-weight: 700;
+    margin-bottom: 3rem;
 }
 
 .imgNossaSenhora {
@@ -130,4 +131,85 @@ figcaption
     font-family: sans-serif;
     letter-spacing: 2.5px;
     color: #3d0909;
+}
+
+/* filtro stilização */
+
+.paiContInputBusca{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.paiContInputBusca p{
+    font-size: 22px;
+    font-weight: 700;
+}
+
+.input-container {
+    margin-top: 20px;
+    position: relative;
+    width: 380px;
+    margin-bottom: 50px;
+}
+
+#search-input {
+    width: 100%;
+    padding: 10px 40px 10px 10px;
+    border-radius: 22px;
+    box-sizing: border-box;
+    height: 50px;
+    border: 3px solid #571111;
+    transition: all 0.3s ease-in-out;
+}
+
+#search-input:focus {
+    border-color: #9e2525;
+    outline: none;
+    box-shadow: 0 0 8px rgba(0, 64, 128, 0.3);
+}
+
+.input-icon {
+    position: absolute;
+    top: 50%;
+    right: 10px;
+    transform: translateY(-50%);
+    width: 24px;
+    height: 24px;
+    fill: #000;
+}
+
+.imgPrincipalCards{
+    width: 46%;
+    min-width: 134px;
+}
+
+@media (max-width: 991px) {
+    .navBarItens {
+        margin-top: 1.5vh;
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    .navBarItens a {
+        font-size: 22px;
+        font-weight: 600;
+    }
+    .card-body{
+        width: 88%;
+        min-width: 260px;
+    }
+}
+
+@Media(max-width: 410px){
+    .input-container{
+        width: 260px;
+    }
+}
+
+@Media(max-width: 368px){
+    .listAparicoes{
+        font-size: 42px!important;
+    }
 }
